--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Javascript for Facebook 2</h1>
+    <p>More stuff to read sitting here.</p>
     
     <script type="text/javascript">
         console.log("hello");
